[=] fixed card auto align

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29413,6 +29413,10 @@ fieldset:disabled .btn {
     border-radius: 0.25rem;
 }
 
+.card.auto-align {
+    height: 100%;
+}
+
 .card>hr {
     margin-right: 0;
     margin-left: 0;
